# soundEngine

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  conanfile.py  sound.json
.github/workflows/: cmake-build.yml  cmake.yml  codeql-analysis.yml  codeql.yml
cmake/: cmake-coverage.cmake  configure_analysis.cmake  deps_cpm.cmake  setup_cpm.cmake  stacktrace.cmake
data/: attributions.txt
examples/: CMakeLists.txt
examples/buffers/: CMakeLists.txt  main.cpp
examples/instances/: CMakeLists.txt  instances.cpp
examples/listener/: CMakeLists.txt  listener_main.cpp
examples/sandbox/: CMakeLists.txt  main.cpp
examples/simple/: CMakeLists.txt  main.cpp  simple.cpp
examples/tasked/: CMakeLists.txt  tasked.cpp
libmp3/: CMakeLists.txt
sandbox/src/: CMakeLists.txt  main.cpp
soundengine/: CMakeLists.txt
soundengine/include/sndX/: ALHelpers.hpp  BackgroundPlayer.hpp  BackgroundPlayerExp.hpp  BackgroundPlayerInterface.hpp  BackgroundPlayerTasked.hpp  BackgroundPlayerThreaded.hpp  Buffer.hpp  BufferCache.hpp  BufferLoaderDelegate.hpp  BufferProvider.hpp  Listener.hpp  Loader.hpp  SoundEngine.hpp  Source.hpp  SourceManager.hpp  TaskEngine.hpp  Types.hpp
soundengine/src/: ALHelpers.h  ALHelpers.hpp  BackgroundPlayer.cpp  BackgroundPlayer.h  BackgroundPlayerThreaded.cpp  Buffer.cpp  Buffer.h  BufferCache.cpp  CMakeLists.txt  ErrorTrace.h  Listener.cpp  LoadWave.cpp  LoadWave.h  Loader.cpp  Loader.h  Loader.hpp  SoundEngine.cpp  SoundEngine.h  SoundEngine.hpp  Source.cpp  Source.h  TaskEngine.cpp  Types.cpp  Types.h  Types.hpp
soundengine/src/loaders/: LoadMp3.cpp  LoadMp3.h  LoadMp3.hpp  LoadWave.cpp  LoadWave.h  LoadWave.hpp
soundengine/test/: CMakeLists.txt
src/: CMakeLists.txt
src/lib/: Buffer.cpp  Buffer.h  CMakeLists.txt  Loader.h  Source.cpp  Source.h  helpers.h  loadWave.h  soundEngine.cpp  soundEngine.h
src/sandbox/: CMakeLists.txt  main.cpp
src/soundEngine/: Buffer.cpp  Buffer.h  CMakeLists.txt  LoadWave.h  Loader.cpp  Loader.h  SoundEngine.cpp  Source.cpp  Source.h  loadWave.h  soundEngine.cpp  soundEngine.h
test/: CMakeLists.txt  tests.cpp
